--- a/style.css
+++ b/style.css
@@ -1,14 +1,13 @@
 /* Basic Styles */
 * {
     margin: 0;
-    padding: 0px;
     box-sizing: border-box;
 }
 body {
     font-family: 'Arial', sans-serif;
     background-color: rgba(255, 255, 255, 1);
     color: #333;
-    padding: 30px 10px;
+    
 }
 
 a {
@@ -25,30 +24,28 @@ h1, h2, h3 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1,083.74px;
+    width: 1083.74px;
     height: 81px;
-    margin: 25px 50px 75px 100px;
+    margin-left: 178px;
+    margin-right: 100px;
     padding: 20px 2px 20px 2px;
     gap: 254px;
     opacity: 0px;
     background-color: white;
 }
 .logo img {
-    width: 164.74px;
+    width: 165px;
     height: 30px;
 
 }
 .menu{
-    width: 264px;
+    width: 265px;
     height: 25px;
     gap: 30px;
-    opacity: 0px;
-
 }
 .menu a {
     margin-left: 20px;
     font-weight: bold;
-    
     font-size: 16px;
     font-weight: 400;
     line-height: 30px;
@@ -125,23 +122,20 @@ h1, h2, h3 {
     height: 320px;
     gap: 0px;
     border-radius: 20px ;
-    opacity: 0px;
 }
 #img2 {
     width: 458px;
     height: 320px;
     gap: 0px;
     border-radius: 20px ;
-    opacity: 0px;
-
+   
 }
 #img3 {
     width: 272px;
     height: 320px;
     gap: 0px;
     border-radius: 20px;
-    opacity: 0px;
-}
+}   
 
 /* Stats Section */
 .stats-section {
@@ -152,19 +146,26 @@ h1, h2, h3 {
 }
 .stats {
     display: flex;
+    width: 960px;
+    height: 90px;
     justify-content: space-around;
     margin-bottom: 40px;
 }
 .stat-item h2 {
-    font-size: 36px;
+    font-size: 48px;
+    font-weight: 600;
     color: #000000;
 }
 .stat-item p {
     font-size: 16px;
+    font-weight: 400px;
 }
 .qoute {
-   
+    width: Fixed (835px);
+    height: 330px;
     color: #555;
+    margin: 30px;
+    
 }
 .qoute blockquote {
     font-style: italic;
@@ -238,9 +239,6 @@ h1, h2, h3 {
     margin-top: 40px;
     color: #ffffff;
   }
-  
-  
-  
   .trustpilot p {
     font-size: 1rem;
     margin-top: 5px;
@@ -310,6 +308,7 @@ h1, h2, h3 {
 /* Case Section */
   .case-studies {
     text-align: center;
+    margin-top: 60px;
     margin-bottom: 50px;
 }
 
@@ -324,11 +323,12 @@ h1, h2, h3 {
     color: #666;
 }
 
-.case-study-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-    justify-items: center;
+.case-study-flex {
+    display: flex;
+    width: 70%;
+    margin: auto;
+    justify-content: space-between;
+    
 }
 
 .case-study {
@@ -405,7 +405,8 @@ li span{
 /* Testimonials Section */
 .testimonial-section {
     text-align: center;
-    margin-bottom: 50px;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .testimonial-section h2 {
@@ -423,7 +424,7 @@ li span{
     display: flex;
     justify-content: center;
     gap: 20px;
-    margin-top: 30px;
+    margin-top: 50px;
 }
 
 .testimonial-card {
@@ -503,11 +504,14 @@ li span{
     align-items: center;
     background-color: #001034;
     color: white;
-    border-radius: 20px;
-    overflow: hidden;
-    margin: 40px 20px;
-    max-width: 1000px;
-    margin: 0 auto;
+    width: 1080px;
+    height: 502px;
+    margin-top: 72px;
+    margin-bottom: 50px;
+    margin-left: 180px;
+    border-radius: 32px;
+    
+    
 }
 
 .cta1-text {
@@ -565,8 +569,8 @@ li span{
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    max-width: 1200px;
-    margin: 0 auto;
+    
+    
     flex-wrap: wrap;
 }
 
